syntax = "proto3";
package players.service.v1;
option go_package = "github.com/Vladislav-Evg-Sid/quizbot/server-player/internal/pb/players_api";
import "models/player_model.proto";
import "google/api/annotations.proto";

service PlayersService {
    rpc GetAllTopics (GetAllTopicsRequest) returns (GetAllTopicsResponce) {
        option (google.api.http) = {
            get: "/api/users/topics"
        };
    }
    
    rpc GetTenQuestionsByTopic (GetTenQuestionsByTopicRequest) returns (GetTenQuestionsByTopicResponce) {
        option (google.api.http) = {
            get: "/api/player/tenquestions/{topic_name}"
        };
    }
    
    rpc SetResultsByQuiz (SetResultsByQuizRequest) returns (SetResultsByQuizResponce) {
        option (google.api.http) = {
            put: "/api/player/quiz/finish"
        };
    }
}

message GetAllTopicsRequest {}

message GetAllTopicsResponce {
    repeated players.models.v1.Topic topics = 1;
}

message GetTenQuestionsByTopicRequest {
    string topic_name = 1;
}

message GetTenQuestionsByTopicResponce {
    repeated players.models.v1.Question questions = 1;
    int64 topic_id = 2;
}

message SetResultsByQuizRequest {
    int64 tg_id = 1;
    int32 thema_id = 2;
    int32 score = 3;
    int32 time =4;
}

message SetResultsByQuizResponce {
    
}